@@ -87,6 +87,18 @@
 
   \item{b}{numeric; the weighting vector for \code{y}.}
 
+  \item{centerX}{a numeric vector giving the center
+  estimates used in standardization of \code{x}.}
+
+  \item{centerY}{a numeric vector giving the center
+  estimates used in standardization of \code{y}.}
+
+  \item{scaleX}{a numeric vector giving the scale estimates
+  used in standardization of \code{x}.}
+
+  \item{scaleY}{a numeric vector giving the scale estimates
+  used in standardization of \code{y}.}
+
   \item{call}{the matched function call.}
 }
 \description{
