@@ -1,6 +1,6 @@
 /*
  * Author: Andreas Alfons
- *         KU Leuven
+ *         Erasmus University Rotterdam
  */
 
 #ifndef _ccaPP_UTILS_H
@@ -15,12 +15,13 @@ using namespace arma;
 using namespace std;
 
 // functions to export to R
-RcppExport SEXP R_l1Median(SEXP R_x);					// for testing
+RcppExport SEXP R_l1Median(SEXP R_x); // for testing
 RcppExport SEXP R_fastMedian(SEXP R_x);
 RcppExport SEXP R_fastMAD(SEXP R_x, SEXP R_constant);
-RcppExport SEXP R_rank(SEXP R_x);						// for testing
+RcppExport SEXP R_rank(SEXP R_x);     // for testing
 
 // functions to be used within C++
+mat covMCD(const mat& x);
 vec l1Median(const mat& x);
 double median(const vec& x);
 double mad(const vec& x, double& center);
