@@ -3,7 +3,13 @@ Changes in ccaPP version 0.2.1
     + Standardization in functions for CCA and maximum correlation is now 
       optional.
     
+    + Functions for CCA and maximum correlation now return center and scale 
+      estimates from standardization.
+    
     + Slightly faster version of fastMedian().
+    
+    + Bugfix in functions for CCA concerning side constraints for higher order 
+      canonical correlations.
     
     + Bugfix in functions for CCA: reduced data for higher order canonical 
       correlations no longer standardized.
